@@ -1,5 +1,9 @@
 2016-02-14  Ben Elliston  <bje@gnu.org>
 
+	* lib/remote.exp (local_exec): Improve comments.
+
+2016-02-14  Ben Elliston  <bje@gnu.org>
+
 	* doc/runtest.1: Tweak.
 
 2016-02-14  Steve Ellcey  <sellcey@mips.com>
